<resources>
    <string name="app_name">DeliveryApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="SERVER_TESTING_DOMAIN">orca-positive-lightly.ngrok-free.app</string>
    <string name="SERVER_PRODUCTION_DOMAIN">alright-gwendolen-intellicart-343c167c.koyeb.app</string>
    <string name="menu_orders">Orders</string>
    <string name="delivery_options">Delivery options</string>
    <string name="order_home">Order_home</string>
    <string name="orders">Orders</string>
    <string name="msg_token_fmt">FCM Token: %s</string>
    <string name="rtdb_order_audio_ref">voice_order_audio</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="audio_title">Audio Title</string>
    <string name="mca_miniproject_title">mca_mini-project\n[02JST22PMC0 43,56]\n[IntelliCart: deliveryApp]</string>
    <string name="refresh_voice_orders">Refresh Voice Orders</string>
    <string name="server_log_dat">"IPv4: 192.168.43.229\nPort no: 5000\nFClientID: "</string>
    <string name="server_offline">Server Offline!</string>
    <string name="start_duty">DMODE</string>
    <string name="off">off</string>
    <string name="on">on</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="bypass_auth_debugmode_enable">bypass auth.</string>
    <string name="signing_in">signing in…</string>
    <string name="signin_failed">signin failed!</string>
    <string name="off_duty">" OFF DUTY "</string>
    <string name="on_duty">" ON DUTY "</string>
    <string name="refreshing">Refreshing orders…</string>
    <string name="fetching_all_orders">Fetching orders…</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="connecting_to_server">connecting to server…</string>
    <string name="playing_audio">playing audio…</string>
    <string name="waiting_for_resource">waiting for resource..</string>
    <string name="audio_resumed">audio resumed</string>
    <string name="audio_paused">audio paused!</string>
    <string name="please_wait">Please wait…</string>
    <string name="no_pending_orders">No pending orders at the moment!</string>
    <string name="my_orders">My Orders</string>
    <string name="prev_order_details">Prev. Order Details</string>
    <string name="settings">Settings</string>
    <string name="download_successful">download successful</string>
    <string name="downloading_audio">downloading audio…</string>
    <string name="delivery1_g_com">delivery1@g.com</string>
    <string name="delivery">delivery</string>
    <string name="waiting_for_response">waiting for client-ID…</string>
    <string name="taking_longer_than_usual">taking longer than usual…</string>
    <string name="server_offline1">SERVER OFFLINE!</string>
    <string name="contacting_server">contacting server…</string>
    <string name="waiting_for_orders">Waiting for orders…</string>
    <string name="order_details"><u>Order Details:</u></string>
    <string name="no_orders_on_queue">No orders on queue!</string>
    <string name="looking_for_orders">Looking for orders…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_info">User Info</string>
    <string name="shop_info">Shop Info</string>
    <string name="order_info_obs">Order Info obs</string>
    <string name="title_activity_order_details">OrderDetailsActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="voice_order">Voice Orders</string>
    <string name="others">Others</string>
    <string name="checking">Checking…</string>
    <string name="enter_a_new">Enter new email and password to register with us. Remember password for future logins.</string>
    <string name="length_should_be_6_or_more">Length should be more than 6 chars</string>
    <string name="fields_can_t_be_empty">Fields can\'t be empty!</string>
    <string name="please_enter_the_email_id">Please enter the email-ID.</string>
    <string name="please_enter_the_password">Please enter the password!</string>
    <string name="user_login">USER LOGIN</string>
    <string name="enter_your_regi">Enter your registered email address and associated password to login</string>
    <string name="enter_your_email_address">Enter your email address:</string>
    <string name="email">Email</string>
    <string name="enter_your_password">Enter your password:</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="login">LOGIN</string>
    <string name="REGISTER">REGISTER</string>
    <string name="LOGIN">LOGIN</string>
    <string name="email_verification_link_sent">Email verification link sent.</string>
    <string name="please_verify_your_email_id">Please verify your email-ID</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="register_account">REGISTER ACCOUNT</string>
    <string name="enter_the_email_address">Enter user email</string>
    <string name="re_enter_the_password">Re-enter the password</string>
    <string name="enter_your_reg">Enter your registered email address to get the password reset link</string>
    <string name="set_a_new_password">Set a new password</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="vishnuspkd14_gmail_com">vishnuspkd14@gmail.com</string>
    <string name="register">REGISTER</string>
    <string name="password_not_match">Password doesn\'t match</string>
    <string name="email_address_has_already_taken">This email has already taken!</string>
    <string name="verify_login_again"><![CDATA["Verify & login again"]]></string>
    <string name="registration_successful">Registration successful</string>
    <string name="registration_failed">Registration failed!</string>
    <string name="email_field_can_t_be_empty">Email field can\'t be empty</string>
    <string name="reset_email_sent">Reset email link sent.</string>
    <string name="unable_to_sent_reset_mail">Unable to sent password reset link.</string>
    <string name="enter_the_registered_email">Enter the registered email:</string>
    <string name="send_link">SEND LINK</string>
    <string name="logout">Logout</string>
    <string name="delete_acc">Delete Account</string>
    <string name="currently_delivering">CURRENT ACCEPTED ORDER</string>
    <string name="downloading">Downloading…</string>
    <string name="playing">playing…</string>
    <string name="download_completed">Download completed</string>
    <string name="do_you_want_to_acc">Are you sure want to continue? Remember that your can only accept other orders after delivering of this order. \nClick \'Accept Order\' to continue, else \'Decline Order\' to decline.</string>
    <string name="are_you_sure_want_to_c">Are you sure want to continue? Remember that once you decline this , it never comes again to you. This action can\'t be undone!</string>
    <string name="decline_order">DECLINE ORDER</string>
    <string name="are_your_sure_to_decline_this_order">Are your sure, to decline this order?</string>
    <string name="accept_order">ACCEPT ORDER</string>
    <string name="if_you_">If you want to decline this order,\nClick \'Decline Order\' button, else close this dialog. Remember you can only deliver this order after delivering the current order if not declined.</string>
    <string name="choose_a_delivery_action_for_this_order">Choose a delivery action for this order?</string>
    <string name="this_order_">This order has been saved for next delivery and successfully added to your next-orders-bucket.</string>
    <string name="delivery_app">QuickGO Delivery App</string>
    <string name="email_id">$(email_id)</string>
    <string name="uid">$(uid)</string>
    <string name="all_orders">All Orders</string>
    <string name="no_voice_orders_for_this_order">No voice-orders found for this order</string>
    <string name="fetching_voice_orders">Fetching voice orders…</string>
    <string name="voice_orders">Voice Orders</string>
    <string name="sname">$(shop_name)</string>
    <string name="other_information">Other Information</string>
    <string name="order_time">$(order_time)</string>
    <string name="order_no">$(order_no)</string>
    <string name="call_client">Call Client</string>
    <string name="show_address_in_map">Show address in map</string>
    <string name="order_delivered">Order delivered</string>
    <string name="order_picked_up">Order picked-up</string>
    <string name="receiver_location">$(receiver_location)</string>
    <string name="receiver_full_addr">$(receivers_full_addr)</string>
    <string name="delivery_details">Delivery Details</string>
    <string name="shop_details">Shop Details</string>
    <string name="call">CALL</string>
    <string name="show_on_map">Show on Map</string>
    <string name="shop_name">$(shop_name)</string>
    <string name="shop_address">$(shop_address)</string>
    <string name="shop_id_time_distance">$(shop_id_time_distance)</string>
    <string name="loading">loading…</string>
    <string name="location_not_available">Location not available</string>
    <string name="order_pickup">Order Pickup</string>
    <string name="unknown">Unknown</string>
    <string name="informing_server">Informing server…</string>
    <string name="_0_0000000_n_n0_0000000_e">0.0000000°N\n0.0000000°E</string>
    <string name="retry_again">Retry again..</string>
    <string name="initializing_gps_please_wait">Initializing GPS, please wait</string>
    <string name="gps_initialization_under">GPS is not initialized. Please wait while android system initialize GPS, This may take only few seconds…</string>
    <string name="hold_on_requesting">Hold on, requesting…</string>
    <string name="please_wait_while_our_ser">Please wait while our servers performing duty-starting procedures (DSP). This may take a while…</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="district">District</string>
    <string name="state">State</string>
    <string name="select_profile_image">Select profile image</string>
    <string name="phone_number_hint">phno</string>
    <string name="pincode_hint">pincode</string>
    <string name="phone_number">Phone number</string>
    <string name="reenter_password_hint">re-enter password</string>
    <string name="password_hint">password</string>
    <string name="locality">Locality</string>
    <string name="pincode">Pincode</string>
    <string name="reenter_password">Re-enter password</string>
    <string name="enter_username">Enter username</string>
    <string name="email_address">Enter email address</string>
    <string name="email_hint">email address</string>
    <string name="username">Enter username</string>
</resources>