<!-- menu_layout.xml -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/extView989"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/archivo_black"
        android:text="@string/are_your_sure_to_decline_this_order"
        android:textSize="18sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center|start"
        android:text="@string/if_you_"
        android:textAlignment="viewStart"
        android:textColor="#686767"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/extView989" />

    <TextView
        android:id="@+id/btmViewCallConfirmCancelBtn_textView"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:background="#810E06"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/decline_order"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/btmViewCallConfirmProceedBtn_textView"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:background="#064E10"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:padding="5dp"
        android:text="DELIVER NEXT"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ProgressBar
        android:id="@+id/btmViewCallConfirm_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="21dp"
        android:layout_height="21dp"
        android:layout_marginTop="5dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>
